Changed css links to rawgit

--- a/Home Page/Home Page.html
+++ b/Home Page/Home Page.html
@@ -15,9 +15,9 @@
     <link rel="shortcut icon" href="http://telerikacademy.com/Content/Images/favicon.ico">
     <link rel="apple-touch-icon" href="http://telerikacademy.com/Content/Images/apple-touch-icon.png">
     <link rel="alternate" type="application/rss+xml" href="http://telerikacademy.com/Rss/LatestCourses" title="Най-новите курсове в Академията на Телерик">
-    <link href="./Home Page_files/kendoCss" rel="stylesheet">
-<link href="./Home Page_files/bootstrap" rel="stylesheet">
-<link href="./Home Page_files/css" rel="stylesheet">
+    <link href="https://rawgit.com/evlogihr/DigitalAcademy/master/Home%20Page/Home%20Page_files/kendoCss" rel="stylesheet">
+<link href="https://rawgit.com/evlogihr/DigitalAcademy/master/Home%20Page/Home%20Page_files/bootstrap" rel="stylesheet">
+<link href="https://rawgit.com/evlogihr/DigitalAcademy/master/Home%20Page/Home%20Page_files/Index.css" rel="stylesheet">
 
     
     <link href="./Home Page_files/Index.css" rel="stylesheet" type="text/css">
