--- a/Home Page/Home Page.html
+++ b/Home Page/Home Page.html
@@ -29,8 +29,8 @@
     </noscript>
     <script id="facebook-jssdk" src="./Home Page_files/all.js"></script><script async="" src="./Home Page_files/analytics.js"></script><script src="./Home Page_files/jquery.min.js"></script> 
     <script>window.jQuery || document.write(decodeURI('%3Cscript src="/Scripts/jquery-2.1.4.min.js"%3E%3C/script%3E'))</script>
-    <script src="./Home Page_files/kendo"></script>
-<script src="./Home Page_files/global"></script>
+    <script src="https://rawgit.com/evlogihr/DigitalAcademy/master/Home%20Page/Home%20Page_files/kendo.js"></script>
+<script src="https://rawgit.com/evlogihr/DigitalAcademy/master/Home%20Page/Home%20Page_files/global.js"></script>
 <script src="https://rawgit.com/evlogihr/DigitalAcademy/master/Home%20Page/Home%20Page_files/bootstrap.js"></script>
 
     <script src="./Home Page_files/jquery.unobtrusive-ajax.min.js"></script>
