--- a/Home Page/Home Page.html
+++ b/Home Page/Home Page.html
@@ -17,6 +17,7 @@
     <link rel="alternate" type="application/rss+xml" href="http://telerikacademy.com/Rss/LatestCourses" title="Най-новите курсове в Академията на Телерик">
     <link href="https://rawgit.com/evlogihr/DigitalAcademy/master/Home%20Page/Home%20Page_files/kendoCss.css" rel="stylesheet">
 <link href="https://rawgit.com/evlogihr/DigitalAcademy/master/Home%20Page/Home%20Page_files/bootstrap.css" rel="stylesheet">
+<link href="https://rawgit.com/evlogihr/DigitalAcademy/master/Home%20Page/Home%20Page_files/css.css" rel="stylesheet">
 <link href="https://rawgit.com/evlogihr/DigitalAcademy/master/Home%20Page/Home%20Page_files/Index.css" rel="stylesheet">
 
     
