--- a/Applicatoin Page/TDA Application Form.html
+++ b/Applicatoin Page/TDA Application Form.html
@@ -1149,7 +1149,8 @@
 
                 <div class="row marginBottom20">
                     <div class="col-md-offset-5 col-md-7">
-                        <input type="submit" id="btn-submit" class="btn btn-success" value="Submit">
+                        <a id="btn-submit" class="btn btn-success" href="https://rawgit.com/evlogihr/DigitalAcademy/master/Successful%20Application/Successful%20Application.html" value="Submit"" />
+                        <!-- <input type="submit" id="btn-submit" class="btn btn-success" value="Submit"> -->
                     </div>
                 </div>
             </div>
