Updated homepage link

--- a/Successful Application/Successful Application.html
+++ b/Successful Application/Successful Application.html
@@ -93,8 +93,8 @@
 
         <nav class="kendo-style-black">
             <ul id="Menu" class="k-widget k-reset k-header k-menu k-menu-horizontal" data-role="menu" role="menubar" tabindex="0" style="display: block;">
-                <li class="k-item k-state-default k-first" role="menuitem">
-                    <a href="http://telerikacademy.com/" class="k-link"><span class="glyphicon glyphicon-home" title="Начало"></span></a>
+               <li class="k-item k-state-default k-first" role="menuitem">
+                    <a href="https://rawgit.com/evlogihr/DigitalAcademy/master/Successful%20Application/Successful%20Application.html" class="k-link"><span class="glyphicon glyphicon-home" title="Начало"></span></a>
                 </li>
                 <li class="k-item k-state-default" role="menuitem">
                     <span class="k-link"><span class="glyphicon glyphicon-globe" title="Софтуерна академия"></span>
