--- a/Home Page/Home Page.html
+++ b/Home Page/Home Page.html
@@ -1514,11 +1514,11 @@
                 <h1>Софтуерна академия</h1>
                 <p>Запишете се за нашите онлайн курсове с безплатен достъп до всички материали и видео уроци. Станете .NET нинджа!</p>
                 <div class="homePageButtons">
-                  <a class="btn btn-lg btn-success" href="http://telerikacademy.com/Courses/Courses/Details/331">
+                  <a id="btn-c-sharp-advanced" class="btn btn-lg btn-success" href="http://telerikacademy.com/Courses/Courses/Details/331">
                     C# за напреднали
                   </a>
                   &nbsp;
-                  <a class="btn btn-lg btn-success" href="http://telerikacademy.com/Courses/Courses/Details/332">
+                  <a id="btn-css-styling" class="btn btn-lg btn-success" href="http://telerikacademy.com/Courses/Courses/Details/332">
                     CSS стилизиране
                   </a>
                   &nbsp;
