Added target="_blank" to buttons

--- a/Home Page/Home Page.html
+++ b/Home Page/Home Page.html
@@ -1514,15 +1514,15 @@
                 <h1>Софтуерна академия</h1>
                 <p>Запишете се за нашите онлайн курсове с безплатен достъп до всички материали и видео уроци. Станете .NET нинджа!</p>
                 <div class="homePageButtons">
-                  <a id="btn-c-sharp-advanced" class="btn btn-lg btn-success" href="http://telerikacademy.com/Courses/Courses/Details/331">
+                  <a id="btn-c-sharp-advanced" class="btn btn-lg btn-success" target="_blank" href="http://telerikacademy.com/Courses/Courses/Details/331">
                     C# за напреднали
                   </a>
                   &nbsp;
-                  <a id="btn-css-styling" class="btn btn-lg btn-success" href="http://telerikacademy.com/Courses/Courses/Details/332">
+                  <a id="btn-css-styling" class="btn btn-lg btn-success" target="_blank" href="http://telerikacademy.com/Courses/Courses/Details/332">
                     CSS стилизиране
                   </a>
                   &nbsp;
-                  <a id="btn-tda-application-page" class="btn btn-lg btn-success" href="https://rawgit.com/evlogihr/DigitalAcademy/master/Applicatoin%20Page/TDA%20Application%20Form.html">
+                  <a id="btn-tda-application-page" class="btn btn-lg btn-success" target="_blank" href="https://rawgit.com/evlogihr/DigitalAcademy/master/Applicatoin%20Page/TDA%20Application%20Form.html">
                     TDA Application Form
                   </a>
                   &nbsp;
